--- a/XOSkinWebApp/Views/ProductRecommendation/Index.cshtml
+++ b/XOSkinWebApp/Views/ProductRecommendation/Index.cshtml
@@ -6,7 +6,8 @@
 
 <div class="text-center">
   <h1 class="display-4">Product Recommendation</h1>
-  <p>XO Skin Recommendation Engine (XOSRE) Recommends for your skin and climate:
+  <p>
+    XO Skin AI Recommendation Engine Recommends for your skin and climate:
   </p>
   @{ 
     foreach (ProductViewModel product in Model)
