Content changes. Minor.

--- a/XOSkinWebApp/Views/ProductRecommendation/Index.cshtml
+++ b/XOSkinWebApp/Views/ProductRecommendation/Index.cshtml
@@ -14,7 +14,7 @@
     foreach (ProductViewModel product in Model)
     {
     <p>
-      <input type="checkbox" checked />
+      <input type="checkbox" class="" checked />
       <b>@Html.DisplayFor(modelItem => product.ProductName)</b>, $@Html.DisplayFor(modelItem => product.ProductPrice)
     </p>
     }
