Added skeleton for Administration.

--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -22,25 +22,28 @@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Top Sellers</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="TopSellers" asp-action="Index">Top Sellers</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Your Face</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="YourFace" asp-action="Index">Your Face</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Your Eyes</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="YourEyes" asp-action="Index">Your Eyes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Lips and Smile</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="LipsAndSmile" asp-action="Index">Lips and Smile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Kits</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Kits" asp-action="Index">Kits</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Gifts and Savings</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Gifts and Savings" asp-action="Index">Gifts and Savings</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Subscriptions and Referrals</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="SubscriptionsAndReferrals" asp-action="Index">Subscriptions and Referrals</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Administration" asp-action="Index">Administration</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
