--- a/XOSkinWebApp/Views/ProductRecommendation/Index.cshtml
+++ b/XOSkinWebApp/Views/ProductRecommendation/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-  <h1 class="display-4">Product Recommendation</h1>
+  <h1 class="display-4">For Your <br />Skin</h1>
   <p>
     XO Skin AI Recommendation Engine recommends for your skin and climate:
   </p>
