--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
       <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-          <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">XO Skin</a>
+          <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/navbarLeftLogo.gif" width="55" height="55" /></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                   aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -19,34 +19,49 @@
           <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
             <ul class="navbar-nav flex-grow-1">
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="TopSellers" asp-action="Index">Top Sellers</a>
+                <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="TopSellers" asp-action="Index">Top Sellers</a>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle nav-link text-dark text-nowrap" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">
+                  <span class="nav-label">Your Skin</span><span class="caret text-dark"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="ProductRecommendation" asp-action="Index">Your Skin Type</a>
+                  </li>
+                  <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="YourFace" asp-action="Index">Your Face</a>
+                  </li>
+                  <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="YourEyes" asp-action="Index">Your Eyes</a>
+                  </li>
+                  <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="YourLipsAndSmile" asp-action="Index">Your Lips and Smile</a>
+                  </li>
+                </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="YourFace" asp-action="Index">Your Face</a>
+                <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="Kits" asp-action="Index">Kits</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="YourEyes" asp-action="Index">Your Eyes</a>
+                <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="GiftsAndSavings" asp-action="Index">Gifts and Savings</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="LipsAndSmile" asp-action="Index">Lips and Smile</a>
+                <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="SubscriptionsAndReferrals" asp-action="Index">Subscriptions and Referrals</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Kits" asp-action="Index">Kits</a>
+                <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="Orders" asp-action="Index">Orders</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Gifts and Savings" asp-action="Index">Gifts and Savings</a>
+                <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="ShoppingCart" asp-action="Index"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                  <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" /></svg>
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="SubscriptionsAndReferrals" asp-action="Index">Subscriptions and Referrals</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Administration" asp-action="Index">Administration</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
               </li>
             </ul>
             <partial name="_LoginPartial" />
