--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                 <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="Orders" asp-action="Index">Orders</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="Lists" asp-action="Index">Lists</a>
+                <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="UserLists" asp-action="Index">Lists</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="ShoppingCart" asp-action="Index">
