--- a/XOSkinWebApp/Views/Jobs/Index.cshtml
+++ b/XOSkinWebApp/Views/Jobs/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
   <h1 class="display-4">XO Jobs</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Cursus risus at ultrices mi tempus imperdiet. Sed augue lacus viverra vitae congue eu consequat. Cras ornare arcu dui vivamus arcu felis bibendum ut. Etiam non quam lacus suspendisse faucibus interdum posuere lorem. Donec adipiscing tristique risus nec feugiat in fermentum posuere urna. Viverra nibh cras pulvinar mattis nunc sed blandit. Et tortor consequat id porta nibh venenatis cras sed felis. Eros donec ac odio tempor orci. Nec sagittis aliquam malesuada bibendum. Sit amet massa vitae tortor condimentum. Leo a diam sollicitudin tempor. Blandit volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque. Ultrices dui sapien eget mi. Eget dolor morbi non arcu risus quis. Fermentum et sollicitudin ac orci phasellus egestas tellus. Imperdiet massa tincidunt nunc pulvinar sapien et.</p>
+  @Html.Raw(ViewData["Jobs.WelcomeText"])
 </div>
