--- a/XOSkinWebApp/Views/ProductRecommendation/Index.cshtml
+++ b/XOSkinWebApp/Views/ProductRecommendation/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center">
   <h1 class="display-4">For Your <br />Skin</h1>
   <p>
-    XO Skin AI Recommendation Engine recommends for your skin and climate:
+    @Html.Raw(ViewData["ProductRecommendation.WelcomeText"])
   </p>
   <br />
   @{ 
