--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -75,10 +75,10 @@
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Languages" asp-action="Index">Languages</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="" asp-action="Index">Language Localization</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="LocalizedTexts" asp-action="Index">Text Localization</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="" asp-action="Index">Image Localization</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="LocalizedImages" asp-action="Index">Image Localization</a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="" asp-action="Index">Users</a>
