--- a/XOSkinWebApp/Areas/Administration/Views/Languages/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Languages/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model XOSkinWebApp.ORM.Language
 
 @{
-    ViewData["Title"] = "Edit";
+  ViewData["Title"] = "Edit";
 }
 
 <h1>Edit</h1>
@@ -9,32 +9,40 @@
 <h4>Language</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-      <form asp-action="Edit">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <input type="hidden" asp-for="Id" />
-        <div class="form-group">
-          <label class="control-label">Language Name</label>
-          <input asp-for="LanguageName" class="form-control" />
-          <span asp-validation-for="LanguageName" class="text-danger"></span>
-        </div>
-        <div class="form-group form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
-          </label>
-        </div>
-        <div class="form-group">
-          <input type="submit" value="Save" class="btn btn-primary" />
-        </div>
-        @Html.Hidden("ActionCreate", "False")
-      </form>
-    </div>
+  <div class="col-md-4">
+    <form asp-action="Edit">
+      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+      <input type="hidden" asp-for="Id" />
+      <div class="form-group">
+        <label class="control-label">Language Name</label>
+        <input asp-for="LanguageName" class="form-control" />
+        <span asp-validation-for="LanguageName" class="text-danger"></span>
+      </div>
+      <div class="form-group form-check">
+        <label class="form-check-label">
+          <input class="form-check-input" asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
+        </label>
+      </div>
+      <div class="form-group">
+        <input type="submit" value="Save" class="btn btn-primary" />
+      </div>
+      @Html.Hidden("ActionCreate", "False")
+      @Html.Hidden("OriginalLanguageName", "")
+    </form>
+  </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+  <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+  @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<script src="~/lib/jquery/dist/jquery.min.js">
+</script>
+<script type="text/javascript">
+  $(document).ready(function () {
+    $("#OriginalLanguageName").val($("#LanguageName").val());
+  });
+</script>
