--- a/XOSkinWebApp/Areas/Administration/Views/Languages/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Languages/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<XOSkinWebApp.ORM.Language>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Languages";
 }
 
-<h1>Index</h1>
+<h1>Languages</h1>
 
 <p>
   <a asp-action="Create">Create New</a>
