--- a/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>Localized Image</h4>
+<h4>Localized Text</h4>
 <hr />
 <div class="row">
   <div class="col-md-4">
@@ -20,17 +20,17 @@
       </div>
       <div class="form-group">
         <label asp-for="Language" class="control-label"></label>
-        <select asp-for="Language" class="form-control" asp-items="ViewBag.Language"></select>
+        <select asp-for="Language" class="form-control" asp-items="ViewBag.Language" disabled></select>
         <span asp-validation-for="Language" class="text-danger"></span>
       </div>
       <div class="form-group">
         <label class="control-label">Placement Point Code</label>
-        <input asp-for="PlacementPointCode" class="form-control" />
+        <input asp-for="PlacementPointCode" class="form-control" disabled />
         <span asp-validation-for="PlacementPointCode" class="text-danger"></span>
       </div>
       <div class="form-group">
         <label asp-for="Page" class="control-label"></label>
-        <select asp-for="Page" class="form-control" asp-items="ViewBag.Page"></select>
+        <select asp-for="Page" class="form-control" asp-items="ViewBag.Page" disabled></select>
         <span asp-validation-for="Page" class="text-danger"></span>
       </div>
       <div class="form-group">
