--- a/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Index.cshtml
@@ -44,8 +44,8 @@
           @Html.DisplayFor(modelItem => item.PageNavigation.Name)
         </td>
         <td>
-          <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-          <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+          <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> <!--|
+          <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>-->
         </td>
       </tr>
     }
