Added basic user management functionality.

--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="LocalizedImages" asp-action="Index">Image Localization</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="" asp-action="Index">Users</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Users" asp-action="Index">Users</a>
                   </li>
                 </ul>
               </li>
