--- a/XOSkinWebApp/Areas/Administration/Views/Users/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Users/Edit.cshtml
@@ -10,63 +10,65 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label class="control-label">Email Address</label>
-                <input asp-for="EmailAddress" class="form-control" />
-                <span asp-validation-for="EmailAddress" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Home Phone Number</label>
-                <input asp-for="HomePhoneNumber" class="form-control" />
-                <span asp-validation-for="HomePhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Work Phone Number</label>
-                <input asp-for="WorkPhoneNumber" class="form-control" />
-                <span asp-validation-for="WorkPhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Additional Phone Number</label>
-                <input asp-for="AdditionalPhoneNumber" class="form-control" />
-                <span asp-validation-for="AdditionalPhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Password</label>
-                <input asp-for="PasswordHash" class="form-control" />
-                <span asp-validation-for="PasswordHash" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">First Name</label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Last Name</label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Preferred Language</label>
-                <select asp-for="PreferredLanguage" class="form-control" asp-items="ViewBag.PreferredLanguage"></select>
-                <span asp-validation-for="PreferredLanguage" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsLocked" /> Account is Disabled
-                </label>
-            </div>
-            <div class="form-group">
-                <label class="control-label">User Group</label>
-                <select asp-for="UserGroup" class="form-control" asp-items="ViewBag.UserGroup"></select>
-                <span asp-validation-for="UserGroup" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+      <form asp-action="Edit">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="Id" />
+        <div class="form-group">
+          <label class="control-label">Email Address</label>
+          <input asp-for="EmailAddress" class="form-control" />
+          <span asp-validation-for="EmailAddress" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label class="control-label">Home Phone Number</label>
+          <input asp-for="HomePhoneNumber" class="form-control" />
+          <span asp-validation-for="HomePhoneNumber" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label class="control-label">Work Phone Number</label>
+          <input asp-for="WorkPhoneNumber" class="form-control" />
+          <span asp-validation-for="WorkPhoneNumber" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label class="control-label">Additional Phone Number</label>
+          <input asp-for="AdditionalPhoneNumber" class="form-control" />
+          <span asp-validation-for="AdditionalPhoneNumber" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label class="control-label">Password</label>
+          <input asp-for="PasswordHash" class="form-control" />
+          <span asp-validation-for="PasswordHash" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label class="control-label">First Name</label>
+          <input asp-for="FirstName" class="form-control" />
+          <span asp-validation-for="FirstName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label class="control-label">Last Name</label>
+          <input asp-for="LastName" class="form-control" />
+          <span asp-validation-for="LastName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label class="control-label">Preferred Language</label>
+          <select asp-for="PreferredLanguage" class="form-control" asp-items="ViewBag.PreferredLanguage"></select>
+          <span asp-validation-for="PreferredLanguage" class="text-danger"></span>
+        </div>
+        <div class="form-group form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" asp-for="IsLocked" /> Account is Disabled
+          </label>
+        </div>
+        <div class="form-group">
+          <label class="control-label">User Group</label>
+          <select asp-for="UserGroup" class="form-control" asp-items="ViewBag.UserGroup"></select>
+          <span asp-validation-for="UserGroup" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <input type="submit" value="Save" class="btn btn-primary" />
+        </div>
+        @Html.Hidden("ActionCreate", "False")
+        @Html.Hidden("OriginalEmailAddress", "")
+      </form>
     </div>
 </div>
 
@@ -77,3 +79,8 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<script type="text/javascript">
+  $(document).ready(function () {
+    $("#OriginalEmailAddress").val($("#EmailAddress").val());
+  });
+</script>
