--- a/XOSkinWebApp/Areas/Administration/Views/Users/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Users/Index.cshtml
@@ -1,57 +1,65 @@
 ﻿@model IEnumerable<XOSkinWebApp.ORM.User>
 
 @{
-    ViewData["Title"] = "Index";
+  ViewData["Title"] = "Users";
 }
 
-<h1>Index</h1>
+<h1>Users</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+  <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Email Address
-            </th>
-            <th>
-                First Name 
-            </th>
-            <th>
-                Last Name
-            </th>
-            <th>
-                Is Disabled
-            </th>
-            <th>
-                Group
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.EmailAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsLocked)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserGroupNavigation.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-            </td>
-        </tr>
-}
-    </tbody>
+<table class="table" id="Users">
+  <thead>
+    <tr>
+      <th>
+        Email Address
+      </th>
+      <th>
+        First Name
+      </th>
+      <th>
+        Last Name
+      </th>
+      <th>
+        Is Disabled
+      </th>
+      <th>
+        Group
+      </th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    @foreach (var item in Model)
+    {
+      <tr>
+        <td>
+          @Html.DisplayFor(modelItem => item.EmailAddress)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.FirstName)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.LastName)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.IsLocked)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.UserGroupNavigation.Name)
+        </td>
+        <td>
+          <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+        </td>
+      </tr>
+    }
+  </tbody>
 </table>
+<script type="text/javascript">
+  var table = $('#Users').DataTable();
+
+  new $.fn.dataTable.Responsive(table, {
+    details: true
+  });
+</script>
