--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="ProductRecommendation" asp-action="Index">Your Skin Type</a>
+                  <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="Questionnaire" asp-action="Index">About Your Skin</a>
                 </li>
                 <li>
                   <a class="nav-link text-dark text-nowrap" asp-area="" asp-controller="YourFace" asp-action="Index">Your Face</a>
@@ -88,6 +88,12 @@
                 </li>
                 <li>
                   <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Users" asp-action="Index">Users</a>
+                </li>
+                <li>
+                  <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Questionnaires" asp-action="Index">Questionnaires</a>
+                </li>
+                <li>
+                  <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Questions" asp-action="Index">Questions</a>
                 </li>
               </ul>
             </li>
