--- a/XOSkinWebApp/Areas/Administration/Views/Languages/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Languages/Create.cshtml
@@ -26,6 +26,7 @@
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
             @Html.Hidden("ActionCreate", "True")
+            @Html.Hidden("OriginalLanguageName", "")
         </form>
     </div>
 </div>
