--- a/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Create.cshtml
@@ -34,6 +34,8 @@
         <input type="submit" value="Create" class="btn btn-primary" />
       </div>
       @Html.Hidden("ActionCreate", "True")
+      @Html.Hidden("OriginalPlacementCode", "")
+      @Html.Hidden("OriginalLanguage", "0")
     </form>
   </div>
 </div>
