--- a/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Edit.cshtml
@@ -39,6 +39,7 @@
       @Html.Hidden("ActionCreate", "False")
       @Html.Hidden("OriginalPlacementCode", "")
       @Html.Hidden("OriginalLanguage", "")
+      @Html.Hidden("LimitedEntry", "True")
     </form>
   </div>
 </div>
