--- a/XOSkinWebApp/Areas/Administration/Views/Questions/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Questions/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Questionnaire" class="control-label"></label>
-                <select asp-for="Questionnaire" class="form-control" asp-items="ViewBag.Questionnaire"></select>
+                <select asp-for="Questionnaire" class="form-control" asp-items="ViewBag.Questionnaire" disabled></select>
                 <span asp-validation-for="Questionnaire" class="text-danger"></span>
             </div>
             <div class="form-group">
