ASP.NET Indentity integration. Mostly on authentication.

--- a/XOSkinWebApp/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/XOSkinWebApp/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirm email";
+    ViewData["Title"] = "Email confirmed. Thank you. Please login with your email address and password.";
 }
 
 <h1>@ViewData["Title"]</h1>
