--- a/XOSkinWebApp/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/XOSkinWebApp/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -9,22 +9,65 @@
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 <div class="row">
     <div class="col-md-6">
-        <form id="profile-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
-        </form>
+      <form id="profile-form" method="post">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+          <label asp-for="Username"></label>
+          <input asp-for="Username" class="form-control" disabled />
+        </div>
+        @*<div class="form-group">
+    <label asp-for="Input.PhoneNumber"></label>
+    <input asp-for="Input.PhoneNumber" class="form-control" />
+    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+    </div>*@
+        <div class="form-group">
+          <label asp-for="Input.HomePhoneNumber"></label>
+          <input asp-for="Input.HomePhoneNumber" class="form-control" />
+          <span asp-validation-for="Input.HomePhoneNumber" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Input.WorkPhoneNumber"></label>
+          <input asp-for="Input.WorkPhoneNumber" class="form-control" />
+          <span asp-validation-for="Input.WorkPhoneNumber" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Input.AdditionalPhoneNumber"></label>
+          <input asp-for="Input.AdditionalPhoneNumber" class="form-control" />
+          <span asp-validation-for="Input.AdditionalPhoneNumber" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Input.FirstName"></label>
+          <input asp-for="Input.FirstName" class="form-control" />
+          <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Input.LastName"></label>
+          <input asp-for="Input.LastName" class="form-control" />
+          <span asp-validation-for="Input.LastName" class="text-danger"></span>
+        </div>
+        <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+      </form>
     </div>
 </div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+<script type="text/javascript">
+  $(document).ready(function () {
+    document.getElementById('Input_HomePhoneNumber').addEventListener('input', function (e) {
+      var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+      e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+    });
+
+    document.getElementById('Input_WorkPhoneNumber').addEventListener('input', function (e) {
+      var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+      e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+    });
+
+    document.getElementById('Input_AdditionalPhoneNumber').addEventListener('input', function (e) {
+      var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+      e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+    });
+  });
+</script>
