--- a/XOSkinWebApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/XOSkinWebApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,29 +8,54 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
+      <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <h4>Create a new account.</h4>
+        <hr />
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <div class="form-group">
+          <label asp-for="Input.Email"></label>
+          <input asp-for="Input.Email" class="form-control" />
+          <span asp-validation-for="Input.Email" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Input.HomePhoneNumber"></label>
+          <input asp-for="Input.HomePhoneNumber" class="form-control" />
+          <span asp-validation-for="Input.HomePhoneNumber" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Input.WorkPhoneNumber"></label>
+          <input asp-for="Input.WorkPhoneNumber" class="form-control" />
+          <span asp-validation-for="Input.WorkPhoneNumber" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Input.AdditionalPhoneNumber"></label>
+          <input asp-for="Input.AdditionalPhoneNumber" class="form-control" />
+          <span asp-validation-for="Input.AdditionalPhoneNumber" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Input.Password"></label>
+          <input asp-for="Input.Password" class="form-control" />
+          <span asp-validation-for="Input.Password" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Input.ConfirmPassword"></label>
+          <input asp-for="Input.ConfirmPassword" class="form-control" />
+          <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Input.FirstName"></label>
+          <input asp-for="Input.FirstName" class="form-control" />
+          <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="Input.LastName"></label>
+          <input asp-for="Input.LastName" class="form-control" />
+          <span asp-validation-for="Input.LastName" class="text-danger"></span>
+        </div>
+        <button type="submit" class="btn-outline-dark btn">Register</button>
+      </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    @*<div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to register.</h4>
             <hr />
@@ -59,9 +84,27 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+<script type="text/javascript">
+  $(document).ready(function () {
+    document.getElementById('Input_HomePhoneNumber').addEventListener('input', function (e) {
+      var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+      e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+    });
+
+    document.getElementById('Input_WorkPhoneNumber').addEventListener('input', function (e) {
+      var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+      e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+    });
+
+    document.getElementById('Input_AdditionalPhoneNumber').addEventListener('input', function (e) {
+      var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+      e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+    });
+  });
+</script>
