--- a/XOSkinWebApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/XOSkinWebApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,11 +18,11 @@
           <span asp-validation-for="Input.Email" class="text-danger"></span>
         </div>
         <div class="form-group">
-          <label asp-for="Input.HomePhoneNumber"></label>
-          <input asp-for="Input.HomePhoneNumber" class="form-control" />
-          <span asp-validation-for="Input.HomePhoneNumber" class="text-danger"></span>
+          <label asp-for="Input.PhoneNumber"></label>
+          <input asp-for="Input.PhoneNumber" class="form-control" />
+          <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
         </div>
-        <div class="form-group">
+        @*<div class="form-group">
           <label asp-for="Input.WorkPhoneNumber"></label>
           <input asp-for="Input.WorkPhoneNumber" class="form-control" />
           <span asp-validation-for="Input.WorkPhoneNumber" class="text-danger"></span>
@@ -31,7 +31,7 @@
           <label asp-for="Input.AdditionalPhoneNumber"></label>
           <input asp-for="Input.AdditionalPhoneNumber" class="form-control" />
           <span asp-validation-for="Input.AdditionalPhoneNumber" class="text-danger"></span>
-        </div>
+        </div>*@
         <div class="form-group">
           <label asp-for="Input.Password"></label>
           <input asp-for="Input.Password" class="form-control" />
@@ -92,19 +92,23 @@
 }
 <script type="text/javascript">
   $(document).ready(function () {
-    document.getElementById('Input_HomePhoneNumber').addEventListener('input', function (e) {
+    document.getElementById('Input_PhoneNumber').addEventListener('input', function (e) {
       var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
       e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
     });
+    //document.getElementById('Input_HomePhoneNumber').addEventListener('input', function (e) {
+    //  var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+    //  e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+    //});
 
-    document.getElementById('Input_WorkPhoneNumber').addEventListener('input', function (e) {
-      var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
-      e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
-    });
+    //document.getElementById('Input_WorkPhoneNumber').addEventListener('input', function (e) {
+    //  var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+    //  e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+    //});
 
-    document.getElementById('Input_AdditionalPhoneNumber').addEventListener('input', function (e) {
-      var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
-      e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
-    });
+    //document.getElementById('Input_AdditionalPhoneNumber').addEventListener('input', function (e) {
+    //  var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+    //  e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+    //});
   });
 </script>
