EF-related corrections.

--- a/XOSkinWebApp/Areas/Administration/Views/Questionnaires/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Questionnaires/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.DateCreated)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreatedByNavigation.EmailAddress)
+                @Html.DisplayFor(modelItem => item.CreatedByNavigation.Email)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
