User authorization work.

--- a/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Create.cshtml
@@ -31,7 +31,7 @@
         <select asp-for="Page" class="form-control" asp-items="ViewBag.Page"></select>
       </div>
       <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
+        <input type="submit" value="Create" class="btn-outline-dark btn" />
       </div>
       @Html.Hidden("ActionCreate", "True")
       @Html.Hidden("OriginalPlacementCode", "")
