--- a/XOSkinWebApp/Views/Home/Index.cshtml
+++ b/XOSkinWebApp/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div id="splash" class="text-sm-center bg-light text-center">
   <div id="splash-content" class="text-sm-center bg-light text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>@Html.Raw(ViewData["Home.SplashText"])</p>
+    @Html.Raw(ViewData["Splash.SplashText"])
     @*<img src="~/img/scarjo.png" id="splash-image" />*@
   </div>
 </div>
