--- a/XOSkinWebApp/Areas/Administration/Views/Languages/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Languages/Create.cshtml
@@ -23,7 +23,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn-outline-dark btn" />
             </div>
             @Html.Hidden("ActionCreate", "True")
             @Html.Hidden("OriginalLanguageName", "")
