--- a/XOSkinWebApp/Areas/Administration/Views/Questionnaires/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Questionnaires/Create.cshtml
@@ -37,7 +37,7 @@
           <span asp-validation-for="DateCreated" class="text-danger"></span>
         </div>*@
         <div class="form-group">
-          <input type="submit" value="Create" class="btn btn-primary" />
+          <input type="submit" value="Create" class="btn-outline-dark btn" />
         </div>
         @Html.Hidden("ActionCreate", "True")
         @Html.Hidden("OriginalQuestionnaireName", "")
