--- a/XOSkinWebApp/Areas/Administration/Views/Questions/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Questions/Create.cshtml
@@ -27,7 +27,7 @@
                 <span asp-validation-for="DisplayOrder" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn-outline-dark btn" />
             </div>
         </form>
     </div>
