--- a/XOSkinWebApp/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/XOSkinWebApp/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using XOSkinWebApp.Areas.Identity
 @using XOSkinWebApp.Areas.Identity.Pages
+@addTagHelper XOSkinWebApp.TagHelper.*, XOSkinWebApp.TagHelper
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
