--- a/XOSkinWebApp/Views/_ViewImports.cshtml
+++ b/XOSkinWebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using XOSkinWebApp
 @using XOSkinWebApp.Models
+@using Microsoft.AspNetCore.Identity
+@addTagHelper XOSkinWebApp.TagHelper.*, XOSkinWebApp.TagHelper
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
