Fixed TagHelper access issue.

--- a/XOSkinWebApp/Areas/Administration/Views/_ViewImports.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using XOSkinWebApp
 @using XOSkinWebApp.Models
 @using Microsoft.AspNetCore.Identity
-@addTagHelper XOSkinWebApp.TagHelper.*, XOSkinWebApp.TagHelper
+@addTagHelper XOSkinWebApp.Areas.Administration.TagHelper.RoleUsersTH, XOSkinWebApp
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
