--- a/XOSkinWebApp/Areas/Administration/Views/Roles/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Roles/Index.cshtml
@@ -13,7 +13,7 @@
 </p>
 
 <table class="table" id="Roles">
-  <thead><tr><th>ID</th><th>Name</th>@*<th>Users</th>*@<th>Update</th><th>Delete</th></tr></thead>
+  <thead><tr><th>ID</th><th>Name</th><th>Users</th><th>Update</th><th>Delete</th></tr></thead>
   <tbody>
     @foreach (var role in Model)
     {
@@ -21,7 +21,7 @@
 
         <td>@role.Id</td>
         <td>@role.Name</td>
-        @*<td i-role="@role.Id"></td>*@
+        <td i-role="@role.Id"></td>
         <td><a class="btn-outline-dark btn" asp-action="Update" asp-route-id="@role.Id">Update</a></td>
         <td>
           <form asp-action="Delete" asp-route-id="@role.Id" method="post">
