Closing Sprint 4. Authentication and Authorization.

--- a/XOSkinWebApp/Areas/Administration/Views/Roles/Update.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Roles/Update.cshtml
@@ -16,7 +16,7 @@
     <tbody>
       @if (Model.NonMember.Count() == 0)
       {
-        <tr><td>All Users Are Members</td><td>No Users are Members</td></tr>
+        <tr><td>All Users Are Members</td><td>N/A</td></tr>
       }
       else
       {
@@ -39,7 +39,7 @@
     <tbody>
       @if (Model.Member.Count() == 0)
       {
-        <tr><th>No Users Are Members</th><th>No Users are Members</th></tr>
+        <tr><th>No Users Are Members</th><th>N/A</th></tr>
       }
       else
       {
