--- a/XOSkinWebApp/Views/Home/Index.cshtml
+++ b/XOSkinWebApp/Views/Home/Index.cshtml
@@ -2,13 +2,13 @@
   ViewData["Title"] = "Home Page";
 }
 
-<div id="splash" class="text-sm-center bg-light text-center">
+<!--<div id="splash" class="text-sm-center bg-light text-center">
   <div id="splash-content" class="text-sm-center bg-light text-center">
     <h1 class="display-4">Welcome</h1>
-    @Html.Raw(ViewData["Splash.SplashText"])
+    @Html.Raw(ViewData["Splash.SplashText"])-->
     @*<img src="~/img/scarjo.png" id="splash-image" />*@
-  </div>
-</div>
+  <!--</div>
+</div>-->
 
 <div class="text-sm-center bg-light text-center">
   @Html.Raw(ViewData["Home.PromotionalRibbon"])
