Added Shopify SDK to web app project.

--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="~/lib/datatables/datatables.min.js"></script>
   <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="~/js/site.js" asp-append-version="true"></script>
+  <script src="~/lib/shopify-sdk/index.unoptimized.umd.min.js"></script>
   @await RenderSectionAsync("Scripts", required: false)
 </head>
 <body>
